# haiku.rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  TOOLS_REFACTORING_PLAN.md  index.html  mkdocs.yml  pyproject.toml  server.json  sitemap.xml  zensical.toml
evaluations/: README.md  benchmark.py  pyproject.toml
evaluations/configs/: orb_multimodal.yaml  orb_multimodal_nemotron.yaml  orb_text.yaml  t2_finqa.yaml  wix.yaml
evaluations/evaluations/: benchmark.py  cli.py  config.py  mm_dataset_builder.py  mm_eval.py  numbers.py  optimization.py  prompts.py  skill_runner.py  submission.py
evaluations/evaluations/datasets/: __init__.py  hotpotqa.py  mm_eval_example.jsonl  mmlongbench.py  open_rag_bench.py  repliqa.py  t2_ragbench.py  wix.py
evaluations/evaluations/evaluators/: __init__.py  citation.py  judge.py  map.py  mrr.py  number_match.py  optimization_judge.py
evaluations/evaluations/optimizer/: __init__.py  dspy_module.py  metric.py  runner.py
evaluations/scripts/: build_t2_submission.py
evaluations/tests/: test_benchmark.py  test_citation_evaluators.py  test_config.py  test_datasets.py  test_evaluators.py  test_numbers.py  test_optimization.py  test_skill_runner.py  test_submission.py
examples/a2a-server/: README.md  a2a.md  pyproject.toml
examples/a2a-server/haiku_rag_a2a/: cli.py
examples/a2a-server/haiku_rag_a2a/a2a/: __init__.py  client.py  models.py  prompts.py  worker.py
examples/a2a-server/security_examples/: apikey_example.py  oauth2_example.py  oauth2_github.py
examples/a2a-server/tests/: test_a2a.py
examples/ag-ui-research/backend/: .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml
haiku_rag_slim/: README.md  pyproject.toml
haiku_rag_slim/haiku/rag/: app.py  chunker.py  circuit_breaker.py  cli.py  cli_chat.py  client.py  context.py  doctor.py  mcp.py  monitor.py  reader.py  s3.py  telemetry.py  utils.py
haiku_rag_slim/haiku/rag/a2a/: __init__.py  worker.py
haiku_rag_slim/haiku/rag/agents/: __init__.py
haiku_rag_slim/haiku/rag/agents/analysis/: __init__.py  agent.py  dependencies.py  models.py  prompts.py  sandbox.py
haiku_rag_slim/haiku/rag/agents/chat/: __init__.py  agent.py  context.py  prompts.py  search.py  state.py
haiku_rag_slim/haiku/rag/agents/qa/: agent.py  prompts.py
haiku_rag_slim/haiku/rag/agents/research/: dependencies.py  graph.py  models.py  prompts.py  state.py
haiku_rag_slim/haiku/rag/agents/rlm/: __init__.py  agent.py  dependencies.py  docker_sandbox.py  models.py  prompts.py  runner.py  sandbox.py
haiku_rag_slim/haiku/rag/agui/: __init__.py  cli_renderer.py  emitter.py  events.py  server.py  stream.py
haiku_rag_slim/haiku/rag/chat/: __init__.py  app.py
haiku_rag_slim/haiku/rag/chat/widgets/: chat_history.py  context_modal.py  document_filter_modal.py
haiku_rag_slim/haiku/rag/chunkers/: base.py  docling_local.py  docling_serve.py
haiku_rag_slim/haiku/rag/client/: __init__.py  agents.py  documents.py  downloads.py  exceptions.py  models.py  processing.py  rebuild.py  search.py  titles.py
haiku_rag_slim/haiku/rag/config/: __init__.py  loader.py  models.py
haiku_rag_slim/haiku/rag/converters/: __init__.py  base.py  docling_local.py  docling_serve.py  pdf_split.py  text_utils.py
haiku_rag_slim/haiku/rag/embeddings/: __init__.py  base.py  cohere.py  lm_studio.py  mlx.py  multimodal.py  vllm.py  voyageai.py
haiku_rag_slim/haiku/rag/graph/: __init__.py
haiku_rag_slim/haiku/rag/graph/agui/: cli_renderer.py  emitter.py  events.py  server.py  stream.py
haiku_rag_slim/haiku/rag/graph/common/: models.py  nodes.py  prompts.py  utils.py
haiku_rag_slim/haiku/rag/graph/deep_qa/: dependencies.py  graph.py  prompts.py  state.py
haiku_rag_slim/haiku/rag/graph/research/: common.py  dependencies.py  graph.py  models.py  prompts.py  state.py
haiku_rag_slim/haiku/rag/ingester/: app.py  batch.py  cli.py  exceptions.py  metadata.py
haiku_rag_slim/haiku/rag/ingester/api/: __init__.py  auth.py  schemas.py  server.py
haiku_rag_slim/haiku/rag/ingester/pollers/: __init__.py  base.py  circuit_breaker.py  factory.py  fs.py  manager.py  periodic.py
haiku_rag_slim/haiku/rag/ingester/queue/: __init__.py  db.py  migrations.py  models.py  repository.py  schema.py
haiku_rag_slim/haiku/rag/ingester/sources/: __init__.py  base.py  filter.py  fs.py  http.py  plugins.py  registry.py  s3.py  webdav.py
haiku_rag_slim/haiku/rag/ingester/workers/: __init__.py  pipeline.py  pool.py  retry.py
haiku_rag_slim/haiku/rag/inspector/: __init__.py  app.py
haiku_rag_slim/haiku/rag/inspector/widgets/: __init__.py  chunk_list.py  context_modal.py  detail_view.py  doc_index_modal.py  document_list.py  info_modal.py  mm_assets_modal.py  search_modal.py  visual_modal.py
haiku_rag_slim/haiku/rag/providers/: docling_serve.py  picture_description.py
haiku_rag_slim/haiku/rag/qa/: __init__.py  agent.py  prompts.py
haiku_rag_slim/haiku/rag/qa/deep/: common.py  dependencies.py  graph.py  models.py  prompts.py  state.py
haiku_rag_slim/haiku/rag/raptor/: builder.py  clustering.py  prompts.py  summarizer.py
haiku_rag_slim/haiku/rag/reranking/: __init__.py  base.py  cohere.py  cross_encoder.py  jina.py  jina_local.py  mxbai.py  vllm.py  zeroentropy.py
haiku_rag_slim/haiku/rag/research/: __init__.py  dependencies.py  graph.py  state.py  stream.py
haiku_rag_slim/haiku/rag/sandbox/: __init__.py  dependencies.py  models.py  sandbox.py
haiku_rag_slim/haiku/rag/skill_generator/: __init__.py
haiku_rag_slim/haiku/rag/skill_generator/templates/: README.md.j2  SKILL.md.j2  __init__.py.j2  pyproject.toml.j2
haiku_rag_slim/haiku/rag/skills/: _deps.py  _tools.py  analysis.py  rag.py  rlm.py
haiku_rag_slim/haiku/rag/skills/rag/: SKILL.md
haiku_rag_slim/haiku/rag/skills/rag-analysis/: SKILL.md
haiku_rag_slim/haiku/rag/skills/rag-rlm/: SKILL.md
haiku_rag_slim/haiku/rag/store/: compression.py  engine.py
haiku_rag_slim/haiku/rag/tools/: __init__.py  analysis.py  context.py  deps.py  document.py  filters.py  models.py  prompts.py  qa.py  search.py  session.py  toolkit.py
(+624 files in other folders)
