[project]

name = "haiku.rag-evals"
description = "Internal benchmarking and evaluation scripts for haiku.rag"
version = "0.17.1"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "haiku.rag-slim",
    "pydantic-ai-slim[evals,logfire]>=1.19.0",
    "datasets>=4.4.1",
    "typer>=0.19.2,<0.20.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluations"]

[tool.ruff.lint.isort]
known-first-party = ["haiku", "evaluations"]
