[project]

name = "haiku.rag-evals"
description = "Benchmarking and evaluation scripts for haiku.rag"
version = "0.32.0"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "haiku.rag-slim",
    "pydantic-ai-slim[evals,logfire]>=1.46.0",
    "datasets>=4.5.0",
    "huggingface_hub>=0.20.0",
    "typer>=0.21.0,<0.22.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
evaluations = "evaluations.benchmark:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluations"]

[tool.ruff.lint.isort]
known-first-party = ["haiku", "evaluations"]
