[project]
name = "haiku-rag-a2a"
description = "A2A protocol server for haiku.rag - Conversational agent interface"
version = "0.1.0"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["RAG", "a2a", "agent", "conversational-ai"]

dependencies = [
    "haiku.rag>=0.26.4",
    "fasta2a>=0.6.0",
    "pydantic-ai-slim[a2a]>=1.39.0",
    "rich>=14.2.0",
    "httpx>=0.28.1",
]

[project.scripts]
haiku-rag-a2a = "haiku_rag_a2a.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haiku_rag_a2a"]
