[project]
name = "haiku-rag-research-assistant"
version = "0.1.0"
description = "Haiku.rag research assistant with AG-UI protocol support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic-ai-slim[ag-ui,openai]>=1.39.0",
    "python-dotenv>=1.2.1",
    "haiku.rag-slim[agui]>=0.25.0",
]

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.14.10"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
